# DeepSeek-from-Scratch

./: .gitignore  README.md  pyproject.toml
Learnings/: KV_Cache.ipynb  MLA.ipynb  MoE.ipynb  deepseek_moe_comparison.ipynb
